--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.75",
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "mailchimp": "^1.2.1",
     "node-cron": "^3.0.0",
     "nodemailer": "^6.7.2"
