--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "mailchimp": "^1.2.1",
     "node-cron": "^3.0.0",
-    "nodemailer": "^6.7.2"
+    "nodemailer": "^6.7.2",
+    "nodemailer-sparkpost-transport": "^2.2.0"
   }
 }
