--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@mailchimp/mailchimp_marketing": "^3.0.75",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "cheerio": "^1.0.0-rc.12",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mailchimp": "^1.2.1",
     "node-cron": "^3.0.0",
+    "node-fetch": "^3.3.0",
     "nodemailer": "^6.7.2",
-    "nodemailer-sparkpost-transport": "^2.2.0"
+    "nodemailer-sparkpost-transport": "^2.2.0",
+    "puppeteer": "^19.6.2",
+    "querystring": "^0.2.1",
+    "sequelize-cockroachdb": "^6.0.5"
   }
 }
