--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer-sparkpost-transport": "^2.2.0",
     "puppeteer": "^19.6.2",
     "querystring": "^0.2.1",
+    "sequelize": "^6.28.0",
     "sequelize-cockroachdb": "^6.0.5"
   }
 }
