--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "mailchimp": "^1.2.1",
     "node-cron": "^3.0.0",
-    "node-fetch": "^3.3.0",
+    "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.2",
     "nodemailer-sparkpost-transport": "^2.2.0",
+    "prompt": "^1.3.0",
     "puppeteer": "^19.6.2",
     "querystring": "^0.2.1",
     "sequelize": "^6.28.0",
